src/manipulator/snapshots/annatto__manipulator__enumerate__tests__by_numeric_fail.snap
---
source: src/manipulator/enumerate.rs
expression: enmr.err().unwrap().to_string()
---
Could not parse numeric value for query index 2
