src/manipulator/snapshots/annatto__manipulator__enumerate__tests__serialize.snap
---
source: src/manipulator/enumerate.rs
expression: serialization.unwrap()
---
queries = ["node"]
target = 1
by = []
sort = []
label = "i"
start = 0
