src/manipulator/snapshots/annatto__manipulator__enumerate__tests__sort_numeric.snap
---
source: src/manipulator/enumerate.rs
expression: actual.unwrap()
---
---- corpus.graphml:
<?xml version="1.0" encoding="UTF-8"?>
<graphml>
    <key id="k0" for="graph" attr.name="configuration" attr.type="string"/>
    <key id="k1" for="node" attr.name="i" attr.type="string"/>
    <key id="k2" for="node" attr.name="annis::node_type" attr.type="string"/>
    <key id="k3" for="node" attr.name="sentiment" attr.type="string"/>
    <key id="k4" for="node" attr.name="sentiment_n" attr.type="string"/>
    <graph edgedefault="directed" parse.order="nodesfirst" parse.nodeids="free" parse.edgeids="canonical">
        <data key="k0"><![CDATA[
# configure visualizations here
]]></data>
        <node id="corpus">
            <data key="k2">corpus</data>
        </node>
        <node id="corpus/document">
            <data key="k2">corpus</data>
        </node>
        <node id="corpus/document#t1">
            <data key="k1">2</data>
            <data key="k2">node</data>
            <data key="k3">positive</data>
            <data key="k4">10</data>
        </node>
        <node id="corpus/document#t2">
            <data key="k1">0</data>
            <data key="k2">node</data>
            <data key="k3">negative</data>
            <data key="k4">0</data>
        </node>
        <node id="corpus/document#t3">
            <data key="k1">1</data>
            <data key="k2">node</data>
            <data key="k3">neutral</data>
            <data key="k4">5</data>
        </node>
        <edge id="e0" source="corpus/document#t1" target="corpus/document#t2" label="Ordering/annis/">
        </edge>
        <edge id="e1" source="corpus/document#t2" target="corpus/document#t3" label="Ordering/annis/">
        </edge>
        <edge id="e2" source="corpus/document" target="corpus" label="PartOf/annis/">
        </edge>
        <edge id="e3" source="corpus/document#t1" target="corpus/document" label="PartOf/annis/">
        </edge>
        <edge id="e4" source="corpus/document#t2" target="corpus/document" label="PartOf/annis/">
        </edge>
        <edge id="e5" source="corpus/document#t3" target="corpus/document" label="PartOf/annis/">
        </edge>
    </graph>
</graphml>
