src/manipulator/snapshots/annatto__manipulator__enumerate__tests__sort_numeric_fail.snap
---
source: src/manipulator/enumerate.rs
expression: enmr.err().unwrap().to_string()
---
Could not interpret value of node #1 as a number.
